@@ -1100,6 +1100,7 @@ public:
 	bool CheckCanHireMerc(Mob* merchant, uint32 template_id);
 	bool CheckCanRetainMerc(uint32 upkeep);
 	bool CheckCanUnsuspendMerc();
+	bool CheckCanDismissMerc();
 	inline uint32 GetMercID()	const { return mercid; }
 	inline uint8 GetMercSlot()	const { return mercSlot; }
 	void SetMercID( uint32 newmercid) { mercid = newmercid; }
