@@ -1,6 +1,11 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
 
+== 03/21/2013 ==
+Bad_Captain: Fixed merc buffing bugs.
+Bad_Captain: Added checks before dismissing merc to prevent possible bugged mercs.
+Bad_Captain: Merged in Secret's merc memory leak fixes.
+
 == 03/18/2013 ==
 Bad_Captain: Fixed zone crash due to merc focus effects & tribute.
 Bad_Captain: Fixed merc aggro issues when client in melee range & spell recast timers. 
